# jacetvanlierop

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  __init__.py  check_structure.py  compare_reports.py  config.json  config.json.bak  config.py  dashboard.py  ensure_init_files.py  fix_imports.py  generate_mock_data.py  go_live_checklist.md  grok_audit_snapshot.txt  insert_dummy_trades.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
.pylint/: crypto_trading_bot.config.__init___1.stats  crypto_trading_bot_1.stats
.streamlit/: config.toml
data/: BTC-USD.csv  ETH-USD.csv  FAKE-USD.csv  SOL-USD.csv
db/: learning_feedback.db  learning_feedback.db-shm  learning_feedback.db-wal  positions.db  positions.db-shm  positions.db-wal  trades.db  trades.db-shm  trades.db-wal
docs/: ppo_agent.md
ledger/: trade_ledger.json  trade_ledger_backup.json
logs/: launchd_nightly_review.err  learning_feedback.jsonl  pipeline.launchd.err  playback.launchd.err  portfolio_state.json  positions.jsonl  shadow_test_results.jsonl
reports/: learning_report.csv  learning_report_2025-08-17_09-34-29.json  learning_report_2025-08-17_09-37-55.csv  learning_report_2025-08-17_09-50-05.csv  learning_report_2025-08-17_10-09-39.json  learning_report_2025-08-17_13-44-35.csv  learning_report_2025-08-17_13-54-02.json  learning_report_2025-08-17_13-56-38.csv  learning_report_2025-08-17_13-56-38.json  learning_report_2025-08-17_14-04-15.csv  learning_report_2025-08-17_14-04-15.json  learning_report_2025-08-17_14-08-53.csv  rejected_suggestions.jsonl  (+24 more)
(+326 files in other folders)
