[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-trading-bot"
version = "1.0.0"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["crypto_trading_bot"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]